--- a/app/src/main/res/layout/activity_detalle__articulos.xml
+++ b/app/src/main/res/layout/activity_detalle__articulos.xml
@@ -21,7 +21,7 @@
 
 
         <TextView
-            android:id="@+id/textview_tandas_articulos_detalle_ventas"
+            android:id="@+id/textview_titulo_cargas_articulos_detalle_ventas"
             android:layout_width="140dp"
             android:layout_height="58dp"
             android:layout_marginStart="60dp"
@@ -55,23 +55,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#2962ff">
 
             <TextView
                 android:id="@+id/tandas_articulos_detalle_ventas"
                 android:layout_width="88dp"
                 android:layout_height="65dp"
                 android:text="Tandas"
+                android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="26sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:typeface="sans" />
 
 
             <TextView
                 android:id="@+id/textview_dispenser_plastico_articulos_detalle_ventas"
-                android:layout_width="108dp"
+                android:layout_width="96dp"
                 android:layout_height="65dp"
-                android:text="Disp. Plasticos"
+                android:text="Disp. P"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="25sp"
@@ -79,9 +82,9 @@
 
             <TextView
                 android:id="@+id/textview_dispenser_electrico_articulos_detalle_ventas"
-                android:layout_width="115dp"
+                android:layout_width="100dp"
                 android:layout_height="65dp"
-                android:text="Disp. Eléctricos"
+                android:text="Disp. E"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="25sp"
@@ -89,15 +92,292 @@
 
             <TextView
                 android:id="@+id/textview_canillas_articulos_detalle_ventas"
-                android:layout_width="78dp"
+                android:layout_width="100dp"
                 android:layout_height="65dp"
                 android:text="Canillas"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="25sp"
                 android:textStyle="bold" />
-
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/primera_tanda_articulos_detalle_ventas"
+                android:layout_width="88dp"
+                android:layout_height="65dp"
+                android:text="1er Tanda:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/primer_tanda_dispenser_plastico_articulos_detalle_ventas"
+                android:layout_width="96dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/primer_tanda_dispenser_electrico_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/primer_tanda_canillas_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#42a5f5">
+
+            <TextView
+                android:id="@+id/segunda_tanda_articulos_detalle_ventas"
+                android:layout_width="88dp"
+                android:layout_height="65dp"
+                android:text="2da Tanda:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/segunda_tanda_dispenser_plastico_articulos_detalle_ventas"
+                android:layout_width="96dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/segunda_tanda_dispenser_electrico_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/segunda_tanda_canillas_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tercera_tanda_articulos_detalle_ventas"
+                android:layout_width="88dp"
+                android:layout_height="65dp"
+                android:text="3ra Tanda:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/tercera_tanda_dispenser_plastico_articulos_detalle_ventas"
+                android:layout_width="96dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tercera_tanda_dispenser_electrico_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tercera_tanda_canillas_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#42a5f5">
+
+            <TextView
+                android:id="@+id/cuarta_tanda_articulos_detalle_ventas"
+                android:layout_width="88dp"
+                android:layout_height="65dp"
+                android:text="4ta Tanda:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/cuarta_tanda_dispenser_plastico_articulos_detalle_ventas"
+                android:layout_width="96dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/cuarta_tanda_dispenser_electrico_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/cuarta_tanda_canillas_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/quinta_tanda_articulos_detalle_ventas"
+                android:layout_width="88dp"
+                android:layout_height="65dp"
+                android:text="5ta Tanda:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/quinta_tanda_dispenser_plastico_articulos_detalle_ventas"
+                android:layout_width="96dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/quinta_tanda_dispenser_electrico_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/quinta_tanda_canillas_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#42a5f5">
+
+            <TextView
+                android:id="@+id/sexta_tanda_articulos_detalle_ventas"
+                android:layout_width="88dp"
+                android:layout_height="65dp"
+                android:text="6ta Tanda:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/sexta_tanda_dispenser_plastico_articulos_detalle_ventas"
+                android:layout_width="96dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/sexta_tanda_dispenser_electrico_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/sexta_tanda_canillas_articulos_detalle_ventas"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
 
 
     </LinearLayout>
