--- a/app/src/main/res/layout/activity_ventas_.xml
+++ b/app/src/main/res/layout/activity_ventas_.xml
@@ -2,271 +2,335 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="20dp"
-    android:layout_marginTop="30dp"
+    android:layout_height="match_parent"
+
+
     tools:context=".Ventas_Activity">
 
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="460dp"
-        android:layout_marginLeft="16dp"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#303f9f">
 
 
         <TextView
-            android:id="@+id/nombre_cliente_ventas"
+            android:id="@+id/nombre_cliente_realizar_ventas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nombre del Cliente"
-            android:textSize="24sp"
+            android:layout_height="40dp"
+            android:text="Nombre"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
+    </LinearLayout>
+
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#303f9f">
+
+
         <TextView
-            android:id="@+id/direccion_cliente_ventas"
+            android:id="@+id/direccion_cliente_realizar_ventas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="Dirección"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="25sp"
             android:textStyle="bold" />
+
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#303f9f">
 
 
         <TextView
-            android:id="@+id/barrio_cliente_ventas"
+            android:id="@+id/barrio_cliente_realizar_ventas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="Barrio"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
 
-        <LinearLayout
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/llenos_envases_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:padding="5dp"
-                android:text="Envases Llenos"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:gravity="end"
-                android:layout_width="165dp"
-                android:layout_height="match_parent">
-
-
-                <EditText
-                    android:id="@+id/cantiad_llenos_ventas"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="@dimen/appbar_padding_top"
-                    android:layout_marginTop="10dp"
-                    android:drawablePadding="0dp"
-                    android:inputType="number"
-                    android:padding="0dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="1dp"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/vacios_envases_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:padding="5dp"
-                android:text="Envases Vacíos"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
-
-            <LinearLayout
-                android:gravity="end"
-                android:layout_width="165dp"
-                android:layout_height="match_parent">
-
-
-
-            <EditText
-                android:id="@+id/cantiad_vacios_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:inputType="number"
-                android:padding="0dp"
-                android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="1dp"
-            android:orientation="horizontal">
-
-
-            <Spinner
-                android:id="@+id/lista_productos_ventas"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:padding="0dp"
-                android:text="Artículos"
-                android:textStyle="bold" />
-
-            <LinearLayout
-
-                android:gravity="end"
-                android:layout_width="145dp"
-                android:layout_height="match_parent">
-
-
-                <EditText
-                    android:id="@+id/cantiad_productos_ventas"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="@dimen/appbar_padding_top"
-                    android:layout_marginTop="10dp"
-                    android:drawablePadding="0dp"
-                    android:inputType="textMultiLine"
-                    android:padding="0dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="1dp"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/saldo_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:padding="0dp"
-                android:text="Saldo"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
-            <LinearLayout
-
-                android:gravity="end"
-                android:layout_width="165dp"
-                android:layout_height="match_parent">
-
-
-                <TextView
-                    android:id="@+id/entrega_ventas"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="@dimen/appbar_padding_top"
-                    android:layout_marginTop="10dp"
-                    android:drawablePadding="0dp"
-                    android:padding="0dp"
-                    android:text="Entrega"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="1dp"
-            android:orientation="horizontal">
-
-
-            <EditText
-                android:id="@+id/saldo_cantidad_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:inputType="numberDecimal"
-                android:padding="0dp"
-                android:textStyle="bold" />
-
-
-            <Button
-                android:id="@+id/button_confirmar_ventas"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:drawableLeft="@drawable/ic_check_black_24dp" />
-
-
-            <LinearLayout
-
-                android:gravity="end"
-                android:layout_width="120dp"
-                android:layout_height="match_parent">
-
-
-            <EditText
-                android:id="@+id/entrega_cantidad_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-
-
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:inputType="numberDecimal"
-                android:padding="0dp"
-                android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
 
 
     </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/llenos_envases_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Envases Llenos:"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+        <EditText
+            android:id="@+id/cantiad_llenos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:layout_marginTop="10dp"
+            android:drawablePadding="0dp"
+            android:inputType="number"
+            android:padding="0dp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/vacios_envases_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Envases Vacíos:"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+        <EditText
+            android:id="@+id/cantiad_vacios_ventas"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:layout_marginTop="10dp"
+            android:drawablePadding="0dp"
+            android:inputType="number"
+            android:padding="0dp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <Spinner
+            android:id="@+id/lista_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Artículos"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/cantidad_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:layout_marginTop="10dp"
+            android:drawablePadding="0dp"
+            android:inputType="number"
+            android:padding="0dp"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <Spinner
+            android:id="@+id/lista2_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Artículos"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/cantidad2_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:layout_marginTop="10dp"
+            android:drawablePadding="0dp"
+            android:inputType="number"
+            android:padding="0dp"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <Spinner
+            android:id="@+id/lista3_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Artículos"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/cantidad3_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:layout_marginTop="10dp"
+            android:drawablePadding="0dp"
+            android:inputType="number"
+            android:padding="0dp"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <Spinner
+            android:id="@+id/lista4_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Artículos"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/cantidad4_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:layout_marginTop="10dp"
+            android:drawablePadding="0dp"
+            android:inputType="number"
+            android:padding="0dp"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#303f9f">
+
+
+        <TextView
+            android:id="@+id/saldo_ventas"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:text="Saldo:"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+
+
+        <Button
+            android:id="@+id/button_confirmar_ventas"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:drawableLeft="@drawable/ic_check_black_24dp" />
+
+
+        <TextView
+            android:id="@+id/entrega_ventas"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:text="Entrega:"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+
+        <EditText
+            android:id="@+id/cantidad_saldo_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="30dp"
+            android:layout_margin="@dimen/appbar_padding_top"
+            android:inputType="number"
+            android:textStyle="bold" />
+
+
+        <EditText
+            android:id="@+id/cantidad_entrega_productos_ventas"
+            android:layout_width="170dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:inputType="number"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+
 
 
 
