--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
+    android:background="#FFF"
     tools:context=".ClientesFragment">
-
-
-
-
 
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
+
 
         android:id="@+id/clientes_recyclerview"
         android:layout_width="match_parent"
@@ -22,20 +21,11 @@
 
     </android.support.v7.widget.RecyclerView>
 
-
-
-
-    <TextView
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Aquí irá una lista de clientes"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-
-
-
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_black_24dp"
+        />
 
 
 </LinearLayout>
