--- a/app/src/main/res/menu/menu_second_.xml
+++ b/app/src/main/res/menu/menu_second_.xml
@@ -7,4 +7,13 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+
+    <item
+        android:icon="@drawable/ic_add_black_24dp"
+        android:id="@+id/agregar_cliente_menu"
+        android:orderInCategory="100"
+        android:title="Agregar Cliente"
+        app:showAsAction="always" />
+
 </menu>
