--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -15,17 +15,19 @@
 
         android:id="@+id/clientes_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="450dp"
+        android:background="#FFF">
 
 
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/fab"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="300dp"
         android:src="@drawable/ic_add_black_24dp"
-        />
+        app:elevation="40dp" />
 
 
 </LinearLayout>
