--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -15,8 +15,10 @@
 
         android:id="@+id/clientes_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:background="#FFF">
+        android:layout_height="445dp"
+        android:layout_marginTop="5dp"
+        android:background="#FFF"
+        android:padding="30dp">
 
 
     </android.support.v7.widget.RecyclerView>
@@ -25,7 +27,7 @@
         android:id="@+id/fab"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginStart="300dp"
+        android:layout_marginStart="250dp"
         android:src="@drawable/ic_add_black_24dp"
         app:elevation="40dp" />
 
