--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/fragment_clientes_id_LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,6 +12,8 @@
 
 
     <!-- TODO: Update blank fragment layout -->
+
+
     <android.support.v7.widget.RecyclerView
 
 
@@ -21,14 +25,15 @@
         android:padding="30dp">
 
 
+
     </android.support.v7.widget.RecyclerView>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="300dp"
         android:src="@drawable/ic_add_black_24dp" />
 
 
