--- a/app/src/main/res/layout/activity_dialog__eliminar__clientes.xml
+++ b/app/src/main/res/layout/activity_dialog__eliminar__clientes.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="310dp"
     android:layout_height="330dp"
     android:layout_margin="40dp"
-    android:layout_marginTop="80dp"
     android:background="#FFF"
     android:orientation="vertical">
 
@@ -50,30 +50,34 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="310dp"
         android:layout_height="130dp"
         android:background="#78909c"
+        android:gravity="top"
         android:paddingTop="30dp">
 
         <Button
-            android:id="@+id/btn_aceptar"
+            android:id="@+id/btn_cancelar"
             android:layout_width="145dp"
             android:layout_height="60dp"
+            android:layout_marginStart="5dp"
             android:background="#00b8d4"
             android:drawableLeft="@drawable/ic_cancel_black_24dp"
             android:text="Cancelar"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
         <Button
-            android:id="@+id/btn_cancelar"
-            android:layout_width="142dp"
+            android:id="@+id/btn_aceptar"
+            android:layout_width="128dp"
             android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="15dp"
             android:background="#00b8d4"
             android:drawableLeft="@drawable/ic_check_black_24dp"
             android:padding="10dp"
             android:text="Aceptar"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
