--- a/app/src/main/res/layout/activity_second_.xml
+++ b/app/src/main/res/layout/activity_second_.xml
@@ -66,7 +66,12 @@
 
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="300dp"
+        android:src="@drawable/ic_add_black_24dp" />
 
 
 
