--- a/app/src/main/res/layout/activity_second_.xml
+++ b/app/src/main/res/layout/activity_second_.xml
@@ -68,9 +68,10 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add_black_24dp" />
 
 
