--- a/app/src/main/res/layout/activity_dialog__eliminar__clientes.xml
+++ b/app/src/main/res/layout/activity_dialog__eliminar__clientes.xml
@@ -57,7 +57,7 @@
         android:paddingTop="30dp">
 
         <Button
-            android:id="@+id/btn_cancelar"
+            android:id="@+id/btn_cancelar_ElC"
             android:layout_width="145dp"
             android:layout_height="60dp"
             android:layout_marginStart="5dp"
@@ -68,7 +68,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/btn_aceptar"
+            android:id="@+id/btn_aceptar_ElC"
             android:layout_width="128dp"
             android:layout_height="60dp"
             android:layout_marginStart="15dp"
