--- a/app/src/main/res/layout/activity_editar_clientes.xml
+++ b/app/src/main/res/layout/activity_editar_clientes.xml
@@ -84,25 +84,24 @@
             >
 
 
+            <Button
+                android:id="@+id/button_cancelar_EC"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
 
-        <Button
-            android:id="@+id/button_cancelar"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-
-            android:layout_margin="@dimen/appbar_padding_top"
+                android:layout_margin="@dimen/appbar_padding_top"
 
 
-            android:layout_marginTop="10dp"
-            android:background="#232323"
-            android:drawablePadding="0dp"
-            android:padding="0dp"
-            android:text="Cancelar"
-            android:textColor="@android:color/white" />
+                android:layout_marginTop="10dp"
+                android:background="#232323"
+                android:drawablePadding="0dp"
+                android:padding="0dp"
+                android:text="Cancelar"
+                android:textColor="@android:color/white" />
 
 
             <Button
-                android:id="@+id/button_aceptar"
+                android:id="@+id/button_aceptar_EC"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
 
