toolbar realizo ventas
asdasdsa

--- a/app/src/main/res/layout/activity_ventas_.xml
+++ b/app/src/main/res/layout/activity_ventas_.xml
@@ -10,6 +10,13 @@
 
     tools:context=".Ventas_Activity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_ventas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
+
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
