--- a/app/src/main/res/layout/dialog_clientes.xml
+++ b/app/src/main/res/layout/dialog_clientes.xml
@@ -14,35 +14,29 @@
         android:background="#232323"
         android:orientation="vertical"
         android:gravity="center_horizontal">
-        
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/dialog_nombre_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="90dp"
             android:text="Nombre"
             android:textColor="@android:color/white"
-            android:textStyle="bold"
             android:textSize="24sp"
-            android:layout_marginTop="90dp"/>
+            android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/dialog_apellido_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="Apellido"
             android:textColor="@android:color/white"
-            android:textStyle="bold"
             android:textSize="24sp"
-            android:layout_marginTop="90dp"/>
+            android:textStyle="bold" />
 
-        </LinearLayout>
 
         <TextView
             android:id="@+id/dialog_telefono_id"
